# cpp-experiments

./: .gitmodules  README.md  add.sh
after/: Makefile  main.cpp
boost-lexical-cast/: Makefile  main.cpp
duration-testing/: Makefile  main.cpp
plugin-test/: CMakeLists.txt  TestPlugin.cpp  TestPlugin.hpp  interface.hpp  main.cpp
plugin-test/plugins/: Plugin1.cpp  Plugin2.cpp
safe-integer/: Makefile  main.cpp
shared_ptr/: Makefile  main.cpp
simple-parent/: .gitignore  Makefile  main.cpp
tuple-ignore/: Makefile  main.cpp  tuple-ignore
unit-testing/singleton/: DependsOnSingleton.cpp  DependsOnSingleton.h  Makefile  MockMySingleton.cpp  MockMySingleton.h  MySingleton.cpp  MySingleton.h  README.md  TestDependsOnSingleton.cpp  main  main.cpp
